# TERE

./: .gitignore  README.md
tere/: CMakeLists.txt  main.cpp
tere/application/: application.cpp  application.h
tere/controls/: button.cpp  button.h  text_button.cpp  text_button.h  text_key_mapper.cpp  text_key_mapper.h  text_toggle.h
tere/credits/: credits_state.cpp  credits_state.h
tere/custom/: custom_bag_state.cpp  custom_bag_state.h  custom_map_state.cpp  custom_map_state.h  custom_menu_state.cpp  custom_menu_state.h
tere/game/: ai.cpp  ai.h  custom_map.cpp  custom_map.h  game_state.cpp  game_state.h  grid.cpp  grid.h  input.cpp  input.h  sweep.cpp  sweep.h  tetromino.cpp  tetromino.h  text.cpp  text.h  tile.cpp  tile.h
tere/gfx/: common.h  cube.cpp  cube.h  line.cpp  line.h  star.cpp  star.h  starfield_a.cpp  starfield_a.h  starfield_b.cpp  starfield_b.h  starfield_handler.cpp  starfield_handler.h  wave_text.cpp  wave_text.h
tere/highscore/: highscore.cpp  highscore.h  highscore_display_state.cpp  highscore_display_state.h  highscore_entry_state.cpp  highscore_entry_state.h
tere/menu/: game_selection_state.cpp  game_selection_state.h  main_menu_state.cpp  main_menu_state.h  menu_options_control_state.cpp  menu_options_control_state.h  menu_options_general_state.cpp  menu_options_general_state.h  menu_options_state.cpp  menu_options_state.h
tere/resource/: resource_holder.h  resource_identifiers.h
tere/save/: custom.map  preset.map  settings.ini
tere/settings/: game_settings.cpp  game_settings.h  player_key_map.h  settings_parser.cpp  settings_parser.h
tere/sound/: music_player.cpp  music_player.h  sound_player.cpp  sound_player.h
tere/state/: state.cpp  state.h  state_identifiers.h  state_stack.cpp  state_stack.h
tere/utility/: key_converter.cpp  key_converter.h  utility.cpp  utility.h
