cmake_minimum_required(VERSION 3.8)
project(tere)

set(CMAKE_CXX_STANDARD 14)
set(SOURCE_FILES 
        main.cpp 
        application/application.cpp
        application/application.h 
        resource/resource_holder.h
        resource/resource_identifiers.h 
        state/state.cpp 
        state/state.h 
        state/state_identifiers.h 
        state/state_stack.cpp 
        state/state_stack.h 
        utility/utility.cpp 
        utility/utility.h
		utility/key_converter.h 
        utility/key_converter.cpp
        game/game_state.cpp
        game/game_state.h
        game/tile.cpp 
		game/tile.h 
		game/tetromino.cpp 
		game/tetromino.h 
		game/text.cpp 
		game/text.h 
		game/ai.cpp 
		game/ai.h 
		game/grid.cpp 
		game/grid.h 
		game/sweep.cpp
		game/sweep.h
		game/input.cpp
		game/input.h
		settings/settings_parser.cpp 
        settings/settings_parser.h
        settings/player_key_map.h 
        settings/game_settings.cpp 
        settings/game_settings.h
		menu/main_menu_state.cpp
		menu/main_menu_state.h
		controls/text_button.cpp
		controls/text_button.h
		controls/text_toggle.h
		menu/menu_options_state.cpp
		menu/menu_options_state.h
		menu/menu_options_control_state.cpp
		menu/menu_options_control_state.h
		controls/text_key_mapper.cpp
		controls/text_key_mapper.h
		menu/menu_options_general_state.cpp
		menu/menu_options_general_state.h
        menu/game_selection_state.cpp
        menu/game_selection_state.h
		sound/sound_player.cpp
		sound/sound_player.h
		sound/music_player.cpp
		sound/music_player.h
		gfx/starfield_handler.h
		gfx/starfield_a.h
		gfx/starfield_b.h
		gfx/starfield_a.cpp
		gfx/starfield_handler.cpp
		gfx/starfield_b.cpp
		gfx/star.cpp
		gfx/star.h
		gfx/wave_text.cpp
		gfx/wave_text.h
        custom/custom_menu_state.cpp
        custom/custom_menu_state.h
		custom/custom_bag_state.cpp
		custom/custom_bag_state.h
		custom/custom_map_state.cpp
		custom/custom_map_state.h
        game/custom_map.cpp 
        game/custom_map.h
		controls/button.cpp
		controls/button.h
		credits/credits_state.cpp
		credits/credits_state.h
        highscore/highscore.cpp
		highscore/highscore.h
		highscore/highscore_display_state.cpp
		highscore/highscore_display_state.h
		highscore/highscore_entry_state.cpp
		highscore/highscore_entry_state.h
		gfx/cube.cpp
		gfx/cube.h
		gfx/line.cpp
		gfx/line.h
		gfx/common.h)

add_executable(tere ${SOURCE_FILES})
target_include_directories(tere PUBLIC .)
target_link_libraries(tere sfml-graphics sfml-audio sfml-window sfml-system)